--- a/index.html
+++ b/index.html
@@ -4,6 +4,59 @@
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
+
+<style>
+  body{
+    background: #000000;
+  }
+  section{
+    width: fit-content;
+    height: fit-content;
+    position: absolute;
+
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+
+    text-align: center;
+    font-size: 20px;
+    font-family: sans-serif;
+    color: red;
+  }
+  #light-panel {
+    display: flex;
+    width: fit-content;
+    height: fit-content;
+    margin: auto;
+  }
+  #btn-panel {
+    text-align: center;
+    margin: 20px 0px;
+  }
+  #btn-panel>button{
+    height: 30px;
+    width: 80px;
+    font-size: 15px;
+    margin: 10px;
+  }
+  .light {
+    width: 100px;
+    aspect-ratio: 2/1;
+    border: 2px solid black;
+  }
+  .light-on{
+    background: red;
+    box-shadow: 0px 0px 50px red;
+  }
+  .light-on2{
+    background: red;
+    box-shadow: 0px 0px 50px red;
+    opacity: 50%;
+  }
+
+</style>
 <body>
 
 <section>
